# KeepAliveUURemoteDesktop

./: .editorconfig  .gitignore  CMakeLists.txt  config.ini  main.cpp  扩展阅读如何仅安装 MSVC 而不安装 Visual Studio.md  构建命令.bat  构建方式.md  过时的前置依赖.md
.github/workflows/: c-cpp.yml
constant/: Constant.cpp  Constant.h
include/: Convert.h  EnvUtil.h  FileUtil.h  IniUtil.h  LogUtil.h  PidUtil.h  StrUtil.h  TrayIcon.h  resource.h
res/: resource.rc
src/: IniUtil.cpp  LogUtil.cpp  PidUtil.cpp  TrayIcon.cpp
